--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 
 #Navbar {
     position: fixed;
-    font-family: 'Lato', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Open Sans', sans-serif;
     color: #ffffff;
     font-weight: 400;
     text-transform: uppercase;
@@ -43,7 +43,7 @@ li a {
 }
 
 li a:hover {
-    background-color: #111;
+    background-color: deepskyblue;
 }
 
 .content{
