--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-body{
-    margin: 0px;
-}
 
 
 #logo{
@@ -18,7 +15,6 @@ body{
     text-transform: uppercase;
     margin: 0;
     width: 100%;
-
 }
 
 ul {
@@ -46,7 +42,7 @@ li a:hover {
     background-color: deepskyblue;
 }
 
-.content{
+.game{
 
     font-family: -apple-system, BlinkMacSystemFont, 'Open Sans', sans-serif;
     font-size: 3em;
