--- a/project_files/css/style.css
+++ b/project_files/css/style.css
@@ -1,20 +1,23 @@
 
 
-#logo{
+#Logo{
     background: -webkit-linear-gradient(70deg, #fff810  30%, rgba(0,0,0,0) 30%), -webkit-linear-gradient(30deg, #63e89e 60%, #ff7ee3 60%);
     background: -o-linear-gradient(70deg, #fff810  30%, rgba(0,0,0,0) 30%), -o-linear-gradient(30deg, #63e89e 60%, #ff7ee3 60%);
     background: -moz-linear-gradient(70deg, #fff810  30%, rgba(0,0,0,0) 30%), -moz-linear-gradient(30deg, #63e89e 60%, #ff7ee3 60%);
     background: linear-gradient(70deg, #fff810  30%, rgba(0,0,0,0) 30%), linear-gradient(30deg, #63e89e 60%, #ff7ee3 60%);
+    /*margin: 0;*/
+    /*width: 100%;*/
+    /*position: fixed;*/
 }
 
 #Navbar {
-    position: fixed;
+    /*position: fixed;*/
     font-family: -apple-system, BlinkMacSystemFont, 'Open Sans', sans-serif;
     color: #ffffff;
     font-weight: 400;
     text-transform: uppercase;
-    margin: 0;
-    width: 100%;
+    /*margin: 0;*/
+    /*width: 100%;*/
 }
 
 ul {
@@ -42,19 +45,20 @@ li a:hover {
     background-color: deepskyblue;
 }
 
-.game{
-
+#Stage{
+    /*margin: 0;*/
+    /*width: 100%;*/
     font-family: -apple-system, BlinkMacSystemFont, 'Open Sans', sans-serif;
     font-size: 3em;
     font-weight: 800;
-    height: 4em;
-    width: 64em;
-    padding: 0.5em 1em;
-    border-radius: 0.25em;
-    display: table-cell;
-    vertical-align: middle;
+    /*height: 4em;*/
     letter-spacing: -2px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    /*width: 64em;*/
+    /*padding: 0.5em 1em;*/
+    /*border-radius: 0.25em;*/
+    /*display: table-cell;*/
+    /*vertical-align: middle;*/
+    /*box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);*/
 
     color: #fff;
     background: -webkit-linear-gradient(110deg, #a60af3 40%, rgba(0, 0, 0, 0) 30%), -webkit-radial-gradient(farthest-corner at 0% 0%, #7a00cc 70%, #c03fff 70%);
