--- a/project_files/css/style.css
+++ b/project_files/css/style.css
@@ -39,7 +39,13 @@
     background-color: deepskyblue;
 }
 
-#Stage{
+.Stage{
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
     font-family: -apple-system, BlinkMacSystemFont, 'Open Sans', sans-serif;
     font-size: 3em;
     font-weight: 800;
