--- a/project_files/css/style.css
+++ b/project_files/css/style.css
@@ -8,7 +8,7 @@
 }
 
 #Navbar {
-    font-family: -apple-system, BlinkMacSystemFont, 'Open Sans', sans-serif;
+    font-family: 'Wendy One', sans-serif;
     color: #ffffff;
     font-weight: 400;
     text-transform: uppercase;
@@ -46,9 +46,9 @@
     flex-wrap: wrap;
     margin-right: -15px;
     margin-left: -15px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Open Sans', sans-serif;
+    font-family: 'Wendy One', sans-serif;
     font-size: 3em;
-    font-weight: 800;
+    font-weight: 600;
     letter-spacing: -2px;
     color: #fff;
     background: -webkit-linear-gradient(110deg, #a60af3 40%, rgba(0, 0, 0, 0) 30%), -webkit-radial-gradient(farthest-corner at 0% 0%, #7a00cc 70%, #c03fff 70%);
