--- a/project_files/css/style.css
+++ b/project_files/css/style.css
@@ -191,8 +191,8 @@
     color: deepskyblue;
 }
 
-#Game{
-    margin-left:5%;
-    /*display: block;*/
-}
+/*#Game{*/
+    /*margin-left:5%;*/
+    /*!*display: block;*!*/
+/*}*/
 
