--- a/project_files/css/style.css
+++ b/project_files/css/style.css
@@ -1,10 +1,9 @@
 
-
-#Logo{
-    background: -webkit-linear-gradient(70deg, #fff810  30%, rgba(0,0,0,0) 30%), -webkit-linear-gradient(30deg, #63e89e 60%, #ff7ee3 60%);
-    background: -o-linear-gradient(70deg, #fff810  30%, rgba(0,0,0,0) 30%), -o-linear-gradient(30deg, #63e89e 60%, #ff7ee3 60%);
-    background: -moz-linear-gradient(70deg, #fff810  30%, rgba(0,0,0,0) 30%), -moz-linear-gradient(30deg, #63e89e 60%, #ff7ee3 60%);
-    background: linear-gradient(70deg, #fff810  30%, rgba(0,0,0,0) 30%), linear-gradient(30deg, #63e89e 60%, #ff7ee3 60%);
+#Logo {
+    background: -webkit-linear-gradient(70deg, #fff810 30%, rgba(0, 0, 0, 0) 30%), -webkit-linear-gradient(30deg, #63e89e 60%, #ff7ee3 60%);
+    background: -o-linear-gradient(70deg, #fff810 30%, rgba(0, 0, 0, 0) 30%), -o-linear-gradient(30deg, #63e89e 60%, #ff7ee3 60%);
+    background: -moz-linear-gradient(70deg, #fff810 30%, rgba(0, 0, 0, 0) 30%), -moz-linear-gradient(30deg, #63e89e 60%, #ff7ee3 60%);
+    background: linear-gradient(70deg, #fff810 30%, rgba(0, 0, 0, 0) 30%), linear-gradient(30deg, #63e89e 60%, #ff7ee3 60%);
 }
 
 #Navbar {
@@ -39,7 +38,7 @@
     background-color: deepskyblue;
 }
 
-.Stage{
+.Stage {
     width: 100%;
     margin-right: auto;
     margin-left: auto;
@@ -61,7 +60,7 @@
 }
 
 
-#content{
+#content {
     width: 100%;
     padding-right: 15px;
     padding-left: 15px;
@@ -120,7 +119,7 @@
     margin-top: 30px;
 }
 
-#myFooter h2 a{
+#myFooter h2 a {
     font-size: 50px;
     text-align: center;
     color: #fff;
@@ -184,7 +183,7 @@
     }
 }
 
-.game_keys{
+.game_keys {
     font-size: 60px;
     padding: 10px;
     transition: 0.2s;
@@ -192,7 +191,7 @@
 }
 
 /*#Game{*/
-    /*margin-left:5%;*/
-    /*!*display: block;*!*/
+/*margin-left:5%;*/
+/*!*display: block;*!*/
 /*}*/
 
