--- a/project_files/css/style.css
+++ b/project_files/css/style.css
@@ -1,4 +1,12 @@
 
+/*body {*/
+    /*width: 100%;*/
+    /*height: auto;*/
+    /*overflow: auto;*/
+    /*overflow-x: hidden;*/
+    /*overflow-y: hidden;*/
+/*}*/
+
 #Logo {
     background: -webkit-linear-gradient(70deg, #fff810 30%, rgba(0, 0, 0, 0) 30%), -webkit-linear-gradient(30deg, #63e89e 60%, #ff7ee3 60%);
     background: -o-linear-gradient(70deg, #fff810 30%, rgba(0, 0, 0, 0) 30%), -o-linear-gradient(30deg, #63e89e 60%, #ff7ee3 60%);
@@ -66,6 +74,7 @@
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
+    height: auto;
 }
 
 
@@ -190,8 +199,4 @@
     color: deepskyblue;
 }
 
-/*#Game{*/
-/*margin-left:5%;*/
-/*!*display: block;*!*/
-/*}*/
 
